correct responsiveness behavior on small screen

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -25,9 +25,14 @@ body {
     position: absolute;
     text-align: center;
     top: -100px;
-    transition: left 1s ease;
+    transition: all 1s ease;
     @media (max-width: 992px) {
+      display: block;
+      font-size: 28px;
       left: 0;
+      text-align: center;
+      top: -40px;
+      width: 100%;
     }
   }
   .form_content {
@@ -37,8 +42,8 @@ body {
     position: relative;
     max-width: 800px;
     @media (max-width: 800px) {
-      margin-left: 30px;
-      margin-right: 30px;
+      margin-left: 20px;
+      margin-right: 20px;
     }
     &:before {
       background: $colorGreen;
@@ -130,10 +135,21 @@ body {
     padding: 50px 60px;
     position: relative;
     height: 100%;
+    p.header {
+      padding-left: 10px;
+      padding-right: 30px;
+      margin-bottom: 0;
+    }
+    @media (max-width: 992px) {
+      padding: 15px;
+    }
   }
 
   form {
-    margin-top: 50px;
+    margin-top: 40px;
+    @media (max-width: 992px) {
+      margin-top: 20px;
+    }
   }
 
   label {
@@ -141,6 +157,7 @@ body {
     color: $colorGrey;
     display: block;
     padding-left: 15px;
+    margin-top: 10px;
   }
   input,
   select {
@@ -162,16 +179,25 @@ body {
   select {
     width: 30%;
     display: inline-block;
+    margin-right: 3%;
+    @media (max-width: 992px) {
+      width: 45%;
+    }
   }
   input {
-    width: 68%;
+    width: 65%;
     display: inline-block;
     padding-bottom: 5px;
+    @media (max-width: 992px) {
+      width: 50%;
+    }
   }
 }
+
 .radio {
   display: inline-block;
   margin-right: 25px;
+  margin-top: 0;
   input[type=radio] {
     display: none;
     &:checked + label,
@@ -219,17 +245,22 @@ body {
     display: inline-block;
     height: 45px;
     &:nth-of-type(1) {width: 15%};
-    &:nth-of-type(2) {width: 35%};
-    &:nth-of-type(3) {width: 34%};
+    &:nth-of-type(2) {width: 33%};
+    &:nth-of-type(3) {width: 33%};
+    @media (max-width: 992px) {
+      &:nth-of-type(1) {width: 20%};
+      &:nth-of-type(2) {width: 20%};
+      &:nth-of-type(3) {width: 40%};
+    }
   }
   .inputSpacer {
     background: $colorGreyLight;
     display: inline-block;
     height: 2px;
-    margin: 0 5px;
+    margin: 0 2%;
     position: relative;
     top: -3px;
-    width: 10px;
+    width: 3%;
   }
 }
 
@@ -243,6 +274,7 @@ body {
   @media (max-width: 992px) {
     right: 50%;
     transform: translate(50%, 0);
+    width: 220px;
   }
 
   .input-group-addon {
@@ -254,6 +286,9 @@ body {
     width: 180px;
     position: relative;
     right: -1px;
+    @media (max-width: 992px) {
+      width: 250px;
+    }
   }
 
   button.form-control {
